[1.457] better wording - faq/faq6.html

--- a/faq/faq6.html
+++ b/faq/faq6.html
@@ -571,7 +571,7 @@ up
       <a href="https://man.openbsd.org/hostname.if">hostname.bridge0</a>,
       вы можете предотвратить утечку вашего не-IP-трафика (например, IPX
       или NETBEUI).
-      Это может быть важно в некоторых ситуациях, но вы должны знать, что мосты
+      Это может быть важно в некоторых ситуациях. Вы должны знать, что мосты
       работают для всех видов трафика, а не только для IP.
   <li>Соединение на мосту требует, чтобы NIC находились в promiscuous режиме.
       Они слушают <b>весь</b> сетевой трафик, а не только тот, который направлен
