[1.442] better wording - security.html

--- a/security.html
+++ b/security.html
@@ -107,8 +107,8 @@ OpenBSD верит в стойкую безопасность. Мы стреми
 <li><h3 id=process>Аудит процесс</h3>
 
 <p>	
-От шести до двенадцати человек входят в команду, кто продолжает
-искать и исправлять ошибки в нашем репозитории. Мы проводим аудит с
+От шести до двенадцати человек составляют команду, которая занимается
+поиском и исправлением ошибки в нашем репозитории. Мы проводим аудит с
 лета 1996г. Процесс по улучшению безопасности охватывает все части системы,
 файл за файлом мы анализируем каждый компонент программы. Мы не столько
 ищем ошибки безопасности, сколько простые программные ошибки. Если
