[1.540] update links for FAQ4 - faq/index.html

--- a/faq/index.html
+++ b/faq/index.html
@@ -64,18 +64,18 @@ OpenBSD, так и <a href="http://www.openbsd.org/cgi-bin/man.cgi">онлайн
 <li><a href="faq1.html#Support"    >Поддержка проекта</a>
 </ul>
 
-<h3><a href="https://www.openbsd.org/faq/faq4.html">Руководство по установке</a></h3>
+<h3><a href="faq4.html">Руководство по установке</a></h3>
 <ul>
-<li><a href="https://www.openbsd.org/faq/faq4.html#bsd.rd"      >Обзор процедуры установки</a>
-<li><a href="https://www.openbsd.org/faq/faq4.html#Checklist"   >Предустановочная проверка</a>
-<li><a href="https://www.openbsd.org/faq/faq4.html#Download"    >Загрузка OpenBSD</a>
-<li><a href="https://www.openbsd.org/faq/faq4.html#MkInsMedia"  >Создание установочного Media</a>
-<li><a href="https://www.openbsd.org/faq/faq4.html#Install"     >Выполнение простой установки</a>
-<li><a href="https://www.openbsd.org/faq/faq4.html#FilesNeeded" >Выбор устанавливаемых компонентов</a>
-<li><a href="https://www.openbsd.org/faq/faq4.html#Partitioning">Создание разделов на диске</a>
-<li><a href="https://www.openbsd.org/faq/faq4.html#SendDmesg"   >Отправка вашего dmesg после установки</a>
-<li><a href="https://www.openbsd.org/faq/faq4.html#site"        >Настройка процесса установки</a>
-<li><a href="https://www.openbsd.org/faq/faq4.html#Multibooting">Мультизагрузка</a>
+<li><a href="faq4.html#bsd.rd"      >Обзор процедуры установки</a>
+<li><a href="faq4.html#Checklist"   >Предустановочная проверка</a>
+<li><a href="faq4.html#Download"    >Загрузка OpenBSD</a>
+<li><a href="faq4.html#MkInsMedia"  >Создание установочного Media</a>
+<li><a href="faq4.html#Install"     >Выполнение простой установки</a>
+<li><a href="faq4.html#FilesNeeded" >Выбор устанавливаемых компонентов</a>
+<li><a href="faq4.html#Partitioning">Создание разделов на диске</a>
+<li><a href="faq4.html#SendDmesg"   >Отправка вашего dmesg после установки</a>
+<li><a href="faq4.html#site"        >Настройка процесса установки</a>
+<li><a href="faq4.html#Multibooting">Мультизагрузка</a>
 </ul>
 
 <h3><a href="https://www.openbsd.org/faq/faq10.html">System Management</a></h3>
